// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APISectionUtils.CommentTextBlock component basic comment 1`] = `
<div>
  <p
    class="mb-4 css-1kfqm4n-TextComponent"
    data-text="true"
  >
    This is the basic comment.
  </p>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component comment with example 1`] = `
<div>
  <span
    class="inline-flex items-center mb-2 css-1yjys1n-TextComponent"
    data-text="true"
  >
    <span
      class="!text-inherit !font-medium css-1ibdfwu-TextComponent"
      data-text="true"
    >
      Only for:
       
    </span>
    <div
      class="!bg-palette-green4 !text-palette-green12 !border-palette-green5 select-none css-7sgr13-PlatformTag"
    >
      <svg
        class="icon-xs text-palette-green12"
        fill="none"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="android-custom-icon"
        >
          <path
            d="M17.0628 15.073C16.5576 15.073 16.1467 14.6605 16.1467 14.1537C16.1467 13.6469 16.5576 13.2347 17.0628 13.2347C17.5679 13.2347 17.9788 13.6469 17.9788 14.1537C17.9788 14.6605 17.5679 15.073 17.0628 15.073ZM6.9372 15.073C6.43204 15.073 6.02116 14.6605 6.02116 14.1537C6.02116 13.6469 6.43204 13.2347 6.9372 13.2347C7.44234 13.2347 7.85325 13.6469 7.85325 14.1537C7.85325 14.6605 7.44234 15.073 6.9372 15.073ZM17.3913 9.53705L19.2222 6.35598C19.3272 6.17313 19.2647 5.93959 19.0828 5.834C18.9008 5.72871 18.6677 5.79135 18.5624 5.97389L16.7087 9.19523C15.291 8.54619 13.6989 8.18468 12 8.18468C10.3011 8.18468 8.70893 8.54619 7.29131 9.19523L5.43751 5.97389C5.33226 5.79135 5.09916 5.72871 4.9172 5.834C4.73524 5.93959 4.67251 6.17313 4.77776 6.35598L6.60865 9.53705C3.46479 11.2524 1.31456 14.4454 1 18.2177H23C22.6851 14.4454 20.5349 11.2524 17.3913 9.53705Z"
            fill="currentColor"
            id="Vector"
          />
        </g>
      </svg>
      <span
        class="css-1q9zso2-PlatformTag"
      >
        Android
      </span>
    </div>
    <br />
  </span>
  <p
    class="mb-4 css-1kfqm4n-TextComponent"
    data-text="true"
  >
    Gets the referrer URL of the installed app with the 
    <a
      class="css-1na8e0o-A"
      href="https://developer.android.com/google/play/installreferrer"
      rel="noopener noreferrer"
      target="_blank"
    >
      <code
        class="css-qyuze8-TextComponent"
        data-text="true"
      >
        Install Referrer API
      </code>
    </a>
    
from the Google Play Store. In practice, the referrer URL may not be a complete, absolute URL.
  </p>
  <p
    class="css-wrgtfc-BoxSectionHeader"
    data-text="true"
  >
    Example
  </p>
  <pre>
    <pre
      class="last:mb-0 css-1r21cuo-Code"
      data-text="true"
    >
      <code
        class="css-dpez7n-Code"
      >
        <span
          class="token keyword"
        >
          await
        </span>
         Application
        <span
          class="token punctuation"
        >
          .
        </span>
        <span
          class="token function"
        >
          getInstallReferrerAsync
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
        <span
          class="token punctuation"
        >
          ;
        </span>
        

        <span
          class="token comment"
        >
          // "utm_source=google-play&utm_medium=organic"
        </span>
        

      </code>
    </pre>
  </pre>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component no comment 1`] = `<div />`;

exports[`APISectionUtils.resolveTypeName Promise 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    void
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Promise with custom type 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#appleauthenticationcredential"
    >
      AppleAuthenticationCredential
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Record 1`] = `
<div>
  Record
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    string
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    any
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Record with union 1`] = `
<div>
  Record
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    string
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    <span>
      number
      <span
        class="text-quaternary"
      >
         | 
      </span>
    </span>
    <span>
      boolean
      <span
        class="text-quaternary"
      >
         | 
      </span>
    </span>
    <span>
      string
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName alternative generic object notation 1`] = `
<div>
  { [column]: any }
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#speechsynthesisevent"
  >
    SpeechSynthesisEvent
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type array 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#appleauthenticationscope"
  >
    AppleAuthenticationScope
    []
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type non-linkable array 1`] = `
<div>
  T[]
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type with single pick 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://www.typescriptlang.org/docs/handbook/utility-types.html#picktype-keys"
    rel="noopener noreferrer"
    target="_blank"
  >
    Pick
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#fontresource"
    >
      FontResource
    </a>
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    'display'
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    () =&gt;
  </span>
   
  <span>
    void
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with arguments 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    (
  </span>
  <span>
    error
    <span
      class="text-quaternary"
    >
      :
    </span>
     
    <a
      class="css-1na8e0o-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    )
  </span>
   
  <span
    class="text-quaternary"
  >
    =&gt;
  </span>
   
  <span>
    void
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with non-linkable custom type 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    (
  </span>
  <span>
    error
    <span
      class="text-quaternary"
    >
      :
    </span>
     
    <a
      class="css-1na8e0o-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    )
  </span>
   
  <span
    class="text-quaternary"
  >
    =&gt;
  </span>
   
  void
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 1`] = `
<div>
  string
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 2`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="#pagedinfo"
  >
    PagedInfo
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#asset"
    >
      Asset
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type in Promise 1`] = `
<div>
  <a
    class="css-1na8e0o-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#pagedinfo"
    >
      PagedInfo
    </a>
    <span
      class="text-quaternary"
    >
      &lt;
    </span>
    <span>
      <a
        class="css-1na8e0o-A"
        href="#asset"
      >
        Asset
      </a>
    </span>
    <span
      class="text-quaternary"
    >
      &gt;
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName object reflection 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    {

  </span>
  <span>
      
    target: 
    number
    , 
    

  </span>
  <span>
      
    value: 
    boolean
    

  </span>
  <span
    class="text-quaternary"
  >
    }
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName props with multiple omits 1`] = `
<div>
  StyleProp
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="https://www.typescriptlang.org/docs/handbook/utility-types.html#omittype-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      Omit
    </a>
    <span
      class="text-quaternary"
    >
      &lt;
    </span>
    <span>
      <a
        class="css-1na8e0o-A"
        href="https://reactnative.dev/docs/view-style-props"
        rel="noopener noreferrer"
        target="_blank"
      >
        ViewStyle
      </a>
      <span
        class="text-quaternary"
      >
        , 
      </span>
    </span>
    <span>
      <span>
        'backgroundColor'
        <span
          class="text-quaternary"
        >
           | 
        </span>
      </span>
      <span>
        'borderRadius'
      </span>
    </span>
    <span
      class="text-quaternary"
    >
      &gt;
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName query type 1`] = `
<div>
  React.ComponentProps
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    View
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName tuple type 1`] = `
<div>
  [
  <span>
    <a
      class="css-1na8e0o-A"
      href="#sortbykey"
    >
      SortByKey
    </a>
    , 
  </span>
  <span>
    boolean
  </span>
  ]
</div>
`;

exports[`APISectionUtils.resolveTypeName union 1`] = `
<div>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union of array values 1`] = `
<div>
  (
  <span>
    <a
      class="css-1na8e0o-A"
      href="#resultseterror"
    >
      ResultSetError
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#resultset"
    >
      ResultSet
    </a>
  </span>
  )
  []
</div>
`;

exports[`APISectionUtils.resolveTypeName union with array 1`] = `
<div>
  <span>
    number[]
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union with custom type and array 1`] = `
<div>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#assetref"
    >
      AssetRef
      []
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="css-1na8e0o-A"
      href="#assetref"
    >
      AssetRef
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName void 1`] = `
<div>
  void
</div>
`;
